--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.4.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
