--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0"
   },
